Add personal access keys and mirror config
